# llamacpp-proxy

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  MANIFEST.txt  NOTES.md  README.md  VALIDATION.md
.flox/: env.json
.flox/pkgs/: llamacpp-proxy.nix
.github/workflows/: ci.yml
fixtures/codex/: README.md
fixtures/codex/synthetic/: backend_prefixed_function_call.json  flat_unprefixed_function_call.expected.json
fixtures/gemini/: README.md
fixtures/gemini/synthetic/: candidate_count_ignored.expected-chat.json  candidate_count_ignored.request.json  mixed_parts.request.json  orphan_function_response.expected-chat.json  orphan_function_response.request.json
fixtures/ollama/: README.md
fixtures/ollama/integration/: README.md  chat_tool_call_stream.backend.sse  chat_tool_call_stream.expected.ndjson  streaming_compressed_backend.expected.ndjson  streaming_compressed_backend.headers.json  streaming_non_sse_text_html.backend.html  streaming_non_sse_text_html.expected.ndjson  streaming_non_sse_text_plain.backend.txt  streaming_non_sse_text_plain.expected.ndjson  streaming_non_sse_text_plain.headers.json  tags_missing_created.backend.json  tags_missing_created.expected.json
fixtures/ollama/observed/: js_0_6_3_chat_nonstream.expected-chat.json  js_0_6_3_chat_nonstream.request.json  js_0_6_3_chat_nonstream.response.json  js_0_6_3_chat_stream_backend_error.request.json  (+32 more)
scripts/: capture_ollama_observed_fixtures.py  validate.sh  validate_ollama_observed_fixtures.py  validate_ollama_tags_idempotency.py  validate_proxy_compression_guard.py
src/: lib.rs  main.rs
(+9 files in other folders)
