[package]
name = "llamacpp-proxy"
version = "0.4.3"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
description = "Unified API translation proxy for llama-server coding-agent harness compatibility"
repository = "https://example.invalid/llamacpp-proxy"
readme = "README.md"

[dependencies]
async-stream = "0.3"
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }
bytes = "1"
futures-util = "0.3"
http = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }


[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
